feat: Add comprehensive Guide view, support messaging, label auto-print, and tenant blocking
- Create Guide view with full app documentation and support contact info
- Implement support messaging system (tenant  superadmin) with backend model and routes
- Add tenant-web UI to send/view replies and superadmin-web UI to list/reply
- Add auto-print label checkbox on package reception with tenant branding
- Enable superadmin to block/unblock tenants from UI with backend enforcement
- Update tenant-web sidebar, superadmin sidebar, and routing
- Create Alembic migration for support_messages table

--- a/frontend-logi/tenant-web/index.html
+++ b/frontend-logi/tenant-web/index.html
@@ -184,6 +184,7 @@
     <link rel="stylesheet" href="views/pickups-payments/pickups-payments.css">
     <link rel="stylesheet" href="views/payroll/payroll.css">
     <link rel="stylesheet" href="views/test-webhooks/test-webhooks.css">
+    <link rel="stylesheet" href="views/guide/guide.css">
     <link rel="stylesheet" href="assets/css/otp-modal.css">
     <link rel="stylesheet" href="views/not-found/not-found.css">
     <link rel="stylesheet" href="views/access-denied/access-denied.css">
@@ -295,6 +296,12 @@
                         <use href="#settings"></use>
                     </svg>
                     <span>Paramètres</span>
+                </a>
+                <a href="#/guide" class="nav-link" data-view="guide">
+                    <svg class="icon" viewBox="0 0 24 24">
+                        <use href="#book-open"></use>
+                    </svg>
+                    <span>Guide & Support</span>
                 </a>
 
                 <!-- Dev/Debug -->
@@ -431,6 +438,7 @@
     <script src="views/test-webhooks/test-webhooks.js"></script>
     <script src="views/not-found/not-found.js"></script>
     <script src="views/access-denied/access-denied.js"></script>
+    <script src="views/guide/guide.js"></script>
 
     <!-- View Filter Service -->
     <script src="services/viewFilter.js"></script>
