--- a/frontend-logi/superadmin-web/index.html
+++ b/frontend-logi/superadmin-web/index.html
@@ -84,6 +84,10 @@
                     <span class="nav-icon">👤</span>
                     <span class="nav-label">Admins</span>
                 </a>
+                <a href="#support" class="nav-item" data-page="support">
+                    <span class="nav-icon">💬</span>
+                    <span class="nav-label">Support</span>
+                </a>
             </nav>
             <div class="sidebar-footer">
                 <div class="admin-info">
@@ -131,6 +135,7 @@
     <script src="assets/js/views/providers.js"></script>
     <script src="assets/js/views/config.js"></script>
     <script src="assets/js/views/admins.js"></script>
+    <script src="assets/js/views/support.js"></script>
     <script src="assets/js/app.js"></script>
 </body>
 </html>
