feat: add ViewCache stale-while-revalidate for instant view rendering
- Create ViewCache service with memory + localStorage persistence
- Integrate into dashboard, packages, clients, staff, announcements, departures
- Show cached data instantly on navigation, refresh silently in background
- Invalidate cache on mutations (create, update, delete)
- Clear cache on logout

--- a/frontend-logi/tenant-web/index.html
+++ b/frontend-logi/tenant-web/index.html
@@ -413,6 +413,7 @@
     <script src="assets/js/components/clock.js"></script>
     <script src="assets/js/components/tracking-progress.js"></script>
     <script src="assets/js/components/otp-modal.js"></script>
+    <script src="assets/js/services/view-cache.js"></script>
     <script src="assets/js/services/realtime.js"></script>
     <script src="assets/js/services/rates.js"></script>
     <script src="assets/js/services/invoice.js"></script>
